<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0f6e1"
    tools:context=".ui.success.SuccessFragment">

    <ImageView
        android:id="@+id/smiley"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/success_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/overlock_bold_italic"
        android:text="@string/success"
        android:textAlignment="center"
        android:textColor="#13D169"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/smiley" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/overlock"
        android:text="@string/order_success_message"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/success_text" />

    <Button
        android:id="@+id/got_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/overlock"
        android:backgroundTint="#13D169"
        android:text="@string/got_it"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>