<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/overlock"
            android:lines="1"
            android:text="@string/order_summary"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/back_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/address_label"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            tools:listitem="@layout/recycler_view_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/overlock"
            android:text="@string/total_bill"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_list" />

        <TextView
            android:id="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/overlock"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/products_list" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/overlock"
            android:lines="1"
            android:text="@string/address_for_delivery"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/total_bill" />

        <EditText
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overlock"
            android:hint="@string/complete_address_including_landmark"
            android:inputType="text"
            android:lines="3"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/address_label" />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#13D169"
            android:fontFamily="@font/overlock"
            android:text="@string/confirm_order"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/address_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>